<resources>
    <string name="app_name">Missing Pets</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- MainFragment -->
    <string name="main_fragment_welcome">Gracias por elegir MissingPets, en que podemos ayudarte.</string>
    <string name="main_fragment_missing_pets">Ver mascotas perdidas.</string>
    <string name="main_fragment_pets_for_adoption">Ver mascotas encontradas.</string>
    <string name="main_fragment_upload_pet_for_adoption">Publicar mascota encontrada.</string>
    <string name="main_fragment_upload_pets">Publicar mascota</string>
    <string name="main_fragment_login">Logearme.</string>
    <string name="main_fragment_settings">Configuraciones.</string>
    <!-- MissingFragment -->
    <string name="missing_fragment_title">Mascotas perdidas.</string>
    <!-- AdoptableFragment -->
    <string name="adoptable_fragment_title">Mascotas en adopcion.</string>

    <string name="preferences_ui_title">Interfaz</string>
    <string name="preferences_ui_img_size">Tamaño de la imagen</string>
    <string name="preferences_key_ui_img_size">pref_ui_img_size</string>
    <string name="preferences_img_size_small">Chica</string>
    <string name="preferences_img_size_medium">Mediana</string>
    <string name="preferences_img_size_large">Grande</string>
    <string name="preferences_key_img_size_small">pref_small</string>
    <string name="preferences_key_img_size_medium">pref_medium</string>
    <string name="preferences_key_img_size_large">pref_large</string>

    <string name="preferences_data_title">Datos</string>
    <string name="preferences_delete_data">Eliminar datos del usuario</string>
    <string name="preferences_key_delete_data">pref_delete_data</string>
    <string name="preferences_restore_data">Restaurar datos y configuraciones</string>
    <string name="preferences_key_restore_data">preferences_key_restore_data</string>
    <string name="main_fragment_about_as">¿Quiénes somos?</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Iniciar sesión</string>
    <string name="action_sign_in_short">Iniciar sesión</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="new_user">Usuario nuevo? </string>
    <string name="register_new_user">Registrate</string>
    <string name="user_have_account">Ya tienes una cuenta? </string>
    <string name="log_in">Iniciá Sesión</string>
    <string name="username">Nombre de usuario</string>
    <string name="register">Registrarse</string>
    <string name="radius">Radio</string>
    <string name="animal">Animal</string>
    <string name="date_from">Fecha desde</string>
    <string name="km">Km</string>
    <string name="input_phone_number">Numero telefono (ej:5491169013434)</string>

    <string-array name="animals">
        <item>Tipo de Animal</item>
        <item>Perro</item>
        <item>Gato</item>
        <item>Conejo</item>
        <item>Otro</item>
    </string-array>

    <string-array name="animals_sex">
        <item>Sexo</item>
        <item>Macho</item>
        <item>Hembra</item>
    </string-array>

    <string name="search_in">Buscar en:</string>
    <string name="name_detail">Nombre:</string>
    <string name="animal_detail">Animal:</string>
    <string name="date_lost_detail">Fecha perdido:</string>
    <string name="sex_detail">Sexo:</string>
    <string name="lost_in_detail">Perdido en:</string>
    <string name="contact_detail">Contactar</string>
    <string name="publicar_detail">Publicar</string>
    <string name="mas_detalles">Más detalles</string>
    <string name="about_us">Somos un grupo de personas con voluntad de ayudar brindando una solución de software gratuita a aquellos que extraviaron sus mascotas, buscamos que puedan reunirse con sus mascotas extraviadas en el menor tiempo posible con la colaboración de la comunidad de usuarios de esta aplicación.</string>

    <string name="post_encontrado">Encontré una mascota</string>
    <string name="post_perdido">Perdí una mascota</string>
    <string name="images_root_path">https://sea.net.ar/missingpets/img/</string>
</resources>