<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainFragment"
    android:orientation="vertical">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/main_fragment_welcome"/>
    <Button
        android:id="@+id/btn_missing_pets"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_fragment_missing_pets"/>
    <Button
        android:id="@+id/btn_pets_for_adoption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_fragment_pets_for_adoption"/>
    <Button
        android:id="@+id/btn_upload_pet_found"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_fragment_upload_pet_for_adoption"/>
    <Button
        android:id="@+id/btn_upload_missing_pets"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_fragment_upload_missing_pets"/>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_fragment_login"/>

    <Button
        android:id="@+id/btn_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_fragment_settings"/>
    <Button
        android:id="@+id/btn_about_as"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_fragment_about_as"/>

</androidx.appcompat.widget.LinearLayoutCompat>