<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewPostFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="vertical" >

            <RadioGroup
                android:id="@+id/rg_estado"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:layout_gravity="center">

                <RadioButton
                    android:id="@+id/rb_encontrado"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/post_encontrado" />

                <RadioButton
                    android:id="@+id/rb_perdido"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/post_perdido" />

            </RadioGroup>

            <ImageView
                android:id="@+id/iv_mascota_encontrada"
                android:layout_width="239dp"
                android:layout_height="239dp"
                android:layout_marginTop="40dp"
                android:layout_gravity="center_horizontal"
                android:src="@android:drawable/ic_menu_camera"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal">

                <Button
                    android:id="@+id/btn_subir_foto_encontrado"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:text="Subir Foto"/>

                <Button
                    android:id="@+id/btn_tomar_foto_encontrado"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:text="Tomar Foto"
                    android:layout_marginLeft="5dp"/>
            </LinearLayout>

            <EditText
                android:id="@+id/et_nombre_animal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/name_detail"
                android:minHeight="48dp" />

            <Spinner
                android:id="@+id/spn_tipo_animales"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/animals"
                android:minHeight="48dp" />

            <Spinner
                android:id="@+id/spn_sexo_animales"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/animals_sex"
                android:minHeight="48dp" />

            <EditText
                android:id="@+id/date_cuando"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:focusable="false"
                android:hint="@string/date_lost_detail"
                android:minHeight="48dp" />

            <EditText
                android:id="@+id/et_mas_detalles_encontrado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:hint="@string/mas_detalles"
                android:gravity="left"
                android:lines="3"
                android:scrollHorizontally="false"
                android:scrollbars="vertical" />

            <LinearLayout
                android:id="@+id/ll_mapa_mascota_encontrada"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_encontrada_en"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lost_in_detail" />

                <ImageView
                    android:id="@+id/imageviewMapa"
                    android:layout_width="200dp"
                    android:layout_height="120dp"
                    android:layout_marginTop="5dp"
                    android:src="@drawable/mapa"
                    tools:ignore="ContentDescription" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textSize="10dp"
                    android:layout_margin="0dp"
                    android:text="Configurar ubicación"/>

            </LinearLayout>
        <LinearLayout
            android:id="@+id/position_mapa"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tv_etiqueta_latitude"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="Latitude" />
            <TextView
                android:id="@+id/tv_latitude"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="TextView" />

            <TextView
                android:id="@+id/tv_etiqueta_longitude"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:text="Longitude" />
            <TextView
                android:id="@+id/tv_longitude"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="TextView" />

        </LinearLayout>

        <Button
                android:id="@+id/btn_publicar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/publicar_detail"
                android:layout_marginTop="20dp"
                android:textAlignment="center"
                android:textStyle="bold"
                app:iconGravity="textEnd"
                app:iconPadding="8dp"
                app:iconTint="@null" />

        </LinearLayout>

    </ScrollView>

</FrameLayout>