<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PostEncontradoFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/iv_mascota_encontrada"
                android:layout_width="239dp"
                android:layout_height="239dp"
                android:layout_marginTop="40dp"
                android:layout_gravity="center_horizontal"
                android:src="@android:drawable/ic_menu_camera"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal">

                <Button
                    android:id="@+id/btn_subir_foto_encontrado"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:text="Subir Foto"/>

                <Button
                    android:id="@+id/btn_tomar_foto_encontrado"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:text="Tomar Foto"
                    android:layout_marginLeft="5dp"/>
            </LinearLayout>

            <EditText
                android:id="@+id/et_nombre_animal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/name_detail"
                android:minHeight="48dp" />

            <Spinner
                android:id="@+id/spn_tipo_animales"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/animals"
                android:minHeight="48dp" />

            <Spinner
                android:id="@+id/spn_sexo_animales"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/animals_sex"
                android:minHeight="48dp" />

            <EditText
                android:id="@+id/date_cuando"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:focusable="false"
                android:hint="@string/date_lost_detail"
                android:minHeight="48dp" />

            <EditText
                android:id="@+id/et_mas_detalles_encontrado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:hint="@string/mas_detalles"
                android:gravity="left"
                android:lines="3"
                android:scrollHorizontally="false"
                android:scrollbars="vertical" />

            <LinearLayout
                android:id="@+id/ll_mapa_mascota_encontrada"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_encontrada_en"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lost_in_detail" />

                <com.google.android.gms.maps.MapView
                    android:id="@+id/mv_mapa_encontrado"
                    android:layout_width="match_parent"
                    android:layout_height="228dp"
                    android:layout_marginTop="20dp"
                    tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />
            </LinearLayout>

            <Button
                android:id="@+id/btn_publicar_encontrado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/publicar_detail"
                android:layout_marginTop="30dp"
                android:textAlignment="center"
                android:textStyle="bold"
                app:iconGravity="textEnd"
                app:iconPadding="8dp"
                app:iconTint="@null" />

        </LinearLayout>

    </ScrollView>

</FrameLayout>