<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/iv_mascota"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:src="@drawable/ic_launcher_foreground" />

            <LinearLayout
                android:id="@+id/ll_datos_mascota_perdida"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="30dp"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/ll_nombre_mascota"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_etiqueta_nombre"
                        android:layout_width="117dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/name_detail" />

                    <TextView
                        android:id="@+id/tv_nombre"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="TextView" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_tipo_mascota"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_etiqueta_tipo_animal"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/animal_detail" />

                    <TextView
                        android:id="@+id/tv_tipo_animal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="TextView" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_sexo_mascota"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_etiqueta_sexo"
                        android:layout_width="82dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/sex_detail" />

                    <TextView
                        android:id="@+id/tv_sexo_animal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="TextView" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_fecha_predida_mascota"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_etiqueta_fecha"
                        android:layout_width="199dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/date_lost_detail" />

                    <TextView
                        android:id="@+id/tv_fecha_perdido"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="TextView" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_mapa_mascota_perdida"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="30dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_perdido_en"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lost_in_detail" />

                <com.google.android.gms.maps.MapView
                    android:id="@+id/mv_mapa"
                    android:layout_width="match_parent"
                    android:layout_height="228dp"
                    android:layout_marginTop="20dp" />
            </LinearLayout>

            <Button
                android:id="@+id/btn_contactar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/contact_detail"
                android:textAlignment="center"
                android:textStyle="bold"
                app:icon="@drawable/ic_whatsapp"
                app:iconGravity="textEnd"
                app:iconPadding="8dp"
                app:iconTint="@null" />
        </LinearLayout>
    </ScrollView>
</FrameLayout>